new stockhistory files with error

--- a/restClients/MyAngularApp/src/app/stock-item/stock-item.component.html
+++ b/restClients/MyAngularApp/src/app/stock-item/stock-item.component.html
@@ -13,7 +13,7 @@
 
     <div class="caption-normal">Amount: {{ stock.amount }}</div>
     <div class="caption-normal"> 
-        <button (click)="remove(stock.id)">BUY</button>
+        <button (click)="remove(stock)">BUY</button>
 </div>
 
 </div>
