--- a/restClients/MyAngularApp/src/app/app.component.html
+++ b/restClients/MyAngularApp/src/app/app.component.html
@@ -3,6 +3,7 @@
   <a routerLink="/another">Another component</a>&nbsp;&nbsp;
   <a routerLink="/shoppingcart">Shopping cart</a>&nbsp;&nbsp;
   <a routerLink="/stocklist">Stock list</a>
+  <a routerLink="/stockHistorylist">Stock History list</a>
 </nav>
 
 <router-outlet></router-outlet>
