--- a/restClients/MyAngularApp/src/app/stockHistory-item/stockHistory-item.component.html
+++ b/restClients/MyAngularApp/src/app/stockHistory-item/stockHistory-item.component.html
@@ -10,7 +10,7 @@
             </span>
         </h2>
     </div>
-   
+    <div class="caption-normal">Date: {{ stockHistory.transaction_date }}</div>
     <div class="caption-normal">Amount: {{ stockHistory.amount }}</div>
     <div class="caption-normal"> 
         <div>
