--- a/restClients/MyAngularApp/src/app/stock-item/stock-item.component.css
+++ b/restClients/MyAngularApp/src/app/stock-item/stock-item.component.css
@@ -30,22 +30,39 @@
 
  .column {
     vertical-align: middle;
-    align-self: center;
+    font-size: 1em;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    margin: auto;
+    padding: 0.5em 0em;
   }
   
   .stock-item{
-    width: 100%;
-    margin: 0;
-    background-color: steelblue;
-    color: white;
+    max-height: 50px;
+    height: 100%;
+    width: 310%;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    
+    justify-content: space-around;
+    background-color: #ffffff;
+    border-bottom: 0.2px solid #ccc;
+    margin-bottom: 0;
   }
 
+  a {
+    font-size: 0.8em;
+    vertical-align: middle;
+  }
+
+  h2 {
+    margin: 0;
+  }
   .stock-item:after {
     content: "";
     display: table;
     clear: both;
+  }
+
+  button {
+    margin: 0;
+    padding: 0;
   }
