--- a/restClients/MyAngularApp/src/app/stock-list/stock-list.component.html
+++ b/restClients/MyAngularApp/src/app/stock-list/stock-list.component.html
@@ -1,3 +1,4 @@
+<html>
 <app-stock-list-header></app-stock-list-header>
 
 <div class="stock-item-container">
@@ -7,3 +8,4 @@
 </div>
 
 <app-stock-list-footer></app-stock-list-footer>
+</html>
