--- a/restClients/MyAngularApp/src/app/app.component.html
+++ b/restClients/MyAngularApp/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nav>
   <a routerLink="/">Home</a>&nbsp;&nbsp;
-  <a routerLink="/stocklist">Stock list</a>
-  <a routerLink="/stockHistorylist">Stock History list</a>
+  <a routerLink="/stocklist">Stocks</a>
+  <a routerLink="/stockHistorylist">Order History</a>
 </nav>
 
 <router-outlet></router-outlet>
