--- a/restClients/MyAngularApp/src/app/stockHistory-list/stockHistory-list.component.html
+++ b/restClients/MyAngularApp/src/app/stockHistory-list/stockHistory-list.component.html
@@ -1,9 +1,9 @@
-
-
+<html>
+<h1 style="margin:0em 2em; padding: 1em 0em;">Order History</h1>
 <div class="stockHistory-item-container">
     <div *ngFor="let stockHistory of StockHistorys | async">
         <app-stockHistory-item [stockHistory]="stockHistory"></app-stockHistory-item>
     </div>
 </div>
-
+</html>
 
