--- a/restClients/MyAngularApp/src/app/stock-list-header/stock-list-header.component.html
+++ b/restClients/MyAngularApp/src/app/stock-list-header/stock-list-header.component.html
@@ -1,1 +1,1 @@
-<h1 style="margin:0em 2em; padding: 1em 0em;">Stocks</h1>
+<h1 style="margin:0em 2em; padding: 1em 0em; text-align:center">Stocks</h1>
