--- a/restClients/MyAngularApp/src/styles.css
+++ b/restClients/MyAngularApp/src/styles.css
@@ -1,22 +1,25 @@
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     padding: 0px;
+    color: black;
 }
 
 nav {
-    background-color: #1199ff;
+    background-color: #fff;
+    color: black;
     padding: 12px 5px;
     margin-bottom: 1px;
+    margin-top: 0;
 }
 
 nav a {
-    color: white;
+    color: black;;
     text-decoration: none;
     padding: 5px;
 }
 
 nav a:hover {
-    color: #1199ff;
+    color: blue;
     background-color: white;
     text-decoration: none;
 }
